apps/reliquary/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reliquary-backend
  labels:
    app: reliquary-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: reliquary-backend
  type: ClusterIP
