apps/reliquary/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reliquary-frontend
  labels:
    app: reliquary-frontend
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: reliquary-frontend
  type: ClusterIP
